* Bug fix(es):  

== 0.3.5 2007-12-03

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):  
  * Fixed a bug with the ASCII processing that left out the agent_released field in the table and data, causing a misalignment.

== 0.3.6 2007-12-20

* Major enhancement(s):
* Minor enhancement(s):
  * Added a Signal.trap on interrupt to echi-converter executable for a more graceful shutdown 
* Bug fix(es):  
  * The bit operators in the boolean fields are now processed properly for BINARY file types (found by user Chun Lim)

== 0.3.7 2008-03-25

* Major enhancement(s):
* Minor enhancement(s):
  * Added support for the dat files: acd.dat, split.cat, tkgrp.dat and vector.dat
  * Added support for turning email notifications on and off - FR#18889
  * Changed the default logging in application.yml to 'NONE' from 'DEBUG'
  * Added standard_version14.yml and extended_version14.yml
* Bug fix(es):  
  * Will now archive 0 length files and not stop the Windows Service - Bug#18888

== 0.3.8 2008-07-18

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):  
  * #18888 with zero byte files
  * #19437 Oracle table names too long in v0.3.7
    * Removed indexes from echi_reasons, echi_acds, echi_splits, echi_trunks and echi_vectors
    * Changed the following fields due to Oracle constraints in using 'number' as a field name:
      - echi_acds
        - number -> acd_number
      - echi_splits
        - number -> split_number
      - echi_vectors
        - number -> vector_number
  * #19490 with inverted fileversion and filenumber
  * #19493 issue with the extra byte read on binary files
* Known issue(s):
  * #21295 - Migrations for Oracle and automated table generation not working

== 0.4.0 2008-07-22

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):  
  * #21295 - Migrations for Oracle and automated table generation not working
* Known issue(s):