@@ -205,6 +205,8 @@
 == 0.4.0 2008-07-22
 
 * Major enhancement(s):
+  * #15294 Windows Service installs as an Auto-Start service
+  * Updated and tested with the latest releases of each of the available gems that ECHI-Converter relies upon
 * Minor enhancement(s):
 * Bug fix(es):  
   * #21295 - Migrations for Oracle and automated table generation not working
